Fixing the page when scrolling on mobile devices and changing the formatting of the Polish phone number

--- a/src/styles/includes/blocks/wrapper.styl
+++ b/src/styles/includes/blocks/wrapper.styl
@@ -7,6 +7,14 @@
 	@media $smMinus
 		padding-bottom 50px
 	
+	@media $xs
+		position fixed
+		top 0
+		left 0
+		right 0
+		bottom 0
+		overflow auto
+	
 	&--homepage,
 	&--user-profile
 		grid-template-rows 1fr
